5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1594_2043.log
== TEST (2019-03-24 13:17:17) 
-- CODE:
nota1 = float(input("Insira o valor da nota1: "))
nota2 = float(input("Insira o valor da nota2: "))
nota3 = float(input("Insira o valor da nota3: "))
nota4 = float(input("Insira o valor da nota4: "))
media = (nota1 + (nota2 * 2) + (nota3 * 3) + (nota4* 4)) / 10
print(round(media,2)
-- ERROR:
File "XXXX", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 13:17:26) 
-- CODE:
nota1 = float(input("Insira o valor da nota1: "))
nota2 = float(input("Insira o valor da nota2: "))
nota3 = float(input("Insira o valor da nota3: "))
nota4 = float(input("Insira o valor da nota4: "))
media = (nota1 + (nota2 * 2) + (nota3 * 3) + (nota4* 4)) / 10
print(round(media,2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 13:17:47) 
-- CODE:
nota1 = float(input("Insira o valor da nota1: "))
nota2 = float(input("Insira o valor da nota2: "))
nota3 = float(input("Insira o valor da nota3: "))
nota4 = float(input("Insira o valor da nota4: "))
media = (nota1 + (nota2 * 2) + (nota3 * 3) + (nota4* 4)) / 10
print(round(media,2))
-- EXECUTION TIME:
0.174212
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
